<resources>
    <string name="app_name">Smart Windows</string>
    <string name="blinds_text">Blinds</string>
    <string name="window_text">Windows</string>
    <string name="automatic_button_text">Automatic</string>
    <string name="manual_button_text">Manual</string>
    <string name="smart_button_text">Smart</string>
    <string name="close_text">Close</string>
    <string name="open_text">Open</string>
    <string name="desired_temp_set_text">Set Desired Temperature</string>
    <string name="enter_temp">Enter Temp (15–30°C)</string>
    <string name="celsius">°C</string>

    //Preferences
    <string name="profile">Profile</string>
    <string name="name">Your name</string>
    <string name="primary_owner">Primary owner</string>
    <string name="user_number">Number of app users</string>
    <string name="close_title">Close when you leave house</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>